# memoria-seismic-observatory

./: .env.example  .gitignore  APPLY_PATCH.cmd  Dockerfile  FILE_HASHES.json  LICENSE  MANIFEST.json  MIGRATION_v0.4.0.md  MIGRATION_v0.5.0.md  MIGRATION_v0.6.0.md  MIGRATION_v0.6.1.md  MIGRATION_v0.6.2.md  Makefile  PATCH_MANIFEST.json  PROJECT_TREE.txt  README.md  README_PATCH.txt  VALIDATION_v0.6.0.md  VALIDATION_v0.6.1.md  build_gold_all.cmd  docker-compose.yml  pyproject.toml  run_local.cmd  run_local.ps1  run_local.sh
.streamlit/: secrets.toml.example
app/: streamlit_app.py
config/: domains.geojson  magnitude_conversion_policy.json  settings.json
docs/: architecture.md  assistant_theme_hotfix_v0.6.2.md  assistant_v0.6.0.md  assistant_v0.6.1.md  data_dictionary.md  demo_script.md  frontend_plotly_fix.md  frontend_similarity_fix.md  frontend_v0.1.6.md  implementation_status.md  isc_ingestion_v0.1.8.md  isc_timeout_v0.1.9.md  limitations.md  methodology.md  mvp_v0.1.7.md  pipeline_recovery.md  reviewer_checklist.md  scientific_adjustments_v0.2.0.md  scientific_integrity_v0.5.0.md  scientific_scope.md  scientific_validation_v0.4.0.md  validation_v0.3.0.md  windows_certificates.md  windows_installation.md
memoria_seismic_observatory.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
notebooks/: README.md
reports/: latest_report.md
src/: __init__.py  common.py  config.py  demo.py  http_client.py  pipeline.py  schema.py  storage.py
tests/: test_assistant_identity_v061.py  test_assistant_theme_v062.py  test_assistant_v060.py  test_epochs.py  (+17 more)
(+318 files in other folders)
