[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memoria-seismic-observatory"
version = "0.6.2"
description = "Explainable seismic-state memory and replay platform for Portugal."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Gonçalo Pedro"}]
dependencies = [
  "numpy>=1.26,<3",
  "pandas>=2.2,<3",
  "requests>=2.31,<3",
  "truststore>=0.10,<1",
  "python-dateutil>=2.9,<3",
  "shapely>=2.0,<3",
  "scikit-learn>=1.4,<2",
  "streamlit>=1.41,<2",
  "plotly>=5.24,<7",
  "pydeck>=0.9,<1",
  "pyarrow>=15,<22",
  "tabulate>=0.9,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-cov>=5,<7",
]

lint = [
  "ruff>=0.6,<1",
]

[project.scripts]
memoria = "src.pipeline:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.poetry]
name = "memoria-seismic-observatory"
version = "0.6.2"
description = "Portuguese Seismic Memory Observatory"
package-mode = false
